# arcmargin-torch

./: .gitignore  README.md  eval.py  pyproject.toml  requirements.txt  train.py
src/: backbones.py  datamodule.py  headers.py  pl_module.py
src/models/: backbones.py  headers.py
